--- a/web/css/style.css
+++ b/web/css/style.css
@@ -32,12 +32,12 @@ score {
   font-size: 4em;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #00b7ff;
+    background-color: lightblue;
     border-radius: 10px;
     color: white;
 }
 #user_badge_cell {
-    background-color: #00b7ff;
+    background-color: lightblue;
     color: white;
     border-radius: 10px;
     position: relative;
