--- a/web/css/style.css
+++ b/web/css/style.css
@@ -13,13 +13,26 @@ score {
    padding-top: 0.6em;
 }
 #course_credits_table {
-   width: 60px;
+   width: 80px;
    float: right;
    font-size: 0.7em;
    text-align: right;
 }
+#course_credits_table div {
+   line-height: 1.4em;
+   background-color: inherit;
+}
+#course_credits_table .credits {
+   width: 20%;
+   display: inline-block;
+   padding-left: 5px;
+}
 #course_credits_table tr {
    line-height: 1.2em;
+   background-color: inherit;
+}
+#course_credits_table td {
+   padding: 1px;
 }
 #user_credits {
   width: 40%; 
@@ -52,4 +65,14 @@ score {
   border-bottom: 1px solid gray;
   padding-top: 20px;
   margin-bottom: 35px;
+}
+td.details-control {
+    background: url('..//images/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('../images/details_close.png') no-repeat center center;
+}
+.dtr-title {
+    vertical-align: top;
 }
